--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Push Google Drive notifications to Discord!",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node ./src/index.js",
     "test": "npm run test"
   },
   "repository": {
@@ -25,6 +25,9 @@
   },
   "homepage": "https://github.com/Ghostly-Bear-Games/google-drive-discord-notifications#readme",
   "dependencies": {
-    "discord.js": "^11.3.2"
+    "bluebird": "^3.5.1",
+    "discord.js": "^11.3.2",
+    "google-auth-library": "^0.12.0",
+    "googleapis": "^25.0.0"
   }
 }
