--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/Ghostly-Bear-Games/google-drive-discord-notifications#readme",
   "dependencies": {
     "bluebird": "^3.5.1",
+    "diff": "^3.5.0",
     "discord.js": "^11.3.2",
     "google-auth-library": "^0.12.0",
     "googleapis": "^25.0.0"
