--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "diff": "^3.5.0",
     "discord.js": "^11.3.2",
     "google-auth-library": "^0.12.0",
-    "googleapis": "^25.0.0"
+    "googleapis": "^25.0.0",
+    "parse-duration": "^0.1.1"
   }
 }
